fixed layout issue in project popover 🌱 (#1223)

--- a/client/components/ProjectTag/ProjectTag.module.scss
+++ b/client/components/ProjectTag/ProjectTag.module.scss
@@ -1,5 +1,11 @@
 .projectTag {
     margin: 0;
+    border: none !important;
+    outline: none !important;
+    [class*='fui-InteractionTagPrimary'] {
+        border: none;
+        outline: none;
+    }
 }
 
 .colorPresets {
